# test-submodule-repos

./: README.md
docker/: .env  .gitignore  docker-compose.yml  telegraf.conf
docker/influxdb_data/: influxd.bolt
docker/pgadmin_data/: pgadmin4.db
docker/pgadmin_data/sessions/: f0c288ce-d300-49ca-9d65-f372e90c4a3a
docker/postgres_data/: postmaster.pid
docker/postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
services/ai_component/: README.md  evaluate.py  pyproject.toml  requirements.txt  setup.py  train.py
services/ai_component/algorithms/: __init__.py  a2c.py  a3c.py  base.py  cem.py  ddpg.py  dqn.py  evolutionary_strategies.py  i2a.py  networks.py  ppo.py  q_learning.py  reinforce.py  sac.py  sarsa.py  soft_q_learning.py  td3.py  trpo.py
services/ai_component/configs/: a2c_config.yml  cem_config.yml  ddpg_config.yml  ppo_config.yml  sac_config.yml
services/ai_component/environments/: lunar_regolith_cont.py  lunar_regolith_disc.py
services/ai_component/tests/test_algorithms/: test_a2c.py  test_a3c.py  test_networks.py
services/ai_component/utils/: helpers.py  logger.py  replay_buffer.py
services/backend/: Dockerfile  main.py
services/frontend/: Dockerfile  bun.lockb  index.html  package.json  tailwind.config.ts  vite.config.ts
services/frontend/src/: client.ts  index.css  main.tsx  routeTree.gen.ts  types.ts
services/influx-db/: pyproject.toml  test.py
services/jetson-simulator/: Dockerfile
services/jetson-simulator/scripts/: entrypoint.sh  setup.sh
services/websocket/: Cargo.toml  Dockerfile
(+78 files in other folders)
